--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@ body {
 }
 
 header {
-    background-color: rgb(209, 216, 9);
+    background-color: rgb(255, 0, 0);
     color: white;
     text-align: center;
     padding: 20px;
 }
 
 h1 {
-    color: rgb(35, 35, 35);
+    color: rgb(255, 255, 255);
 }
 
 h2, h3, p {
-    color: rgb(111, 255, 0);
+    color: rgb(255, 0, 0);
 }
 
 main {
@@ -42,9 +42,8 @@ main {
 }
 
 footer {
-    background-color: rgb(190, 178, 4);
+    background-color: #bf2f2b;
     color: white;
     text-align: center;
     padding: 10px;
 }
-
